--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -89,7 +89,7 @@ body {
       transition: color .4s;
     }
     a:hover {
-      color: #b1b1b1;
+      color: #ffa403;
       text-decoration: underline;
     }
 
