--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,23 +52,24 @@ body {
 }
 
 .logo {
-  margin-bottom:12.5px;
+  margin-bottom:5px;
   font-weight:$font-weight-bold;
+  text-align: center;
 }
-.logo a {
-  -webkit-transition:.4s;
-  transition:.4s;
-}
+// .logo a {
+//   -webkit-transition:.4s;
+//   transition:.4s;
+// }
 
-.logo a:hover {
-  color:#222;
-  background-image:-webkit-linear-gradient(bottom,#222,#222);
-  background-image:linear-gradient(to top,#222,#222);
-  text-shadow:-1px -1px 0 #FDFDFD,1px -1px 0 #FDFDFD,-1px 1px 0 #FDFDFD,1px 1px 0 #FDFDFD;
-  background-repeat:repeat-x;
-  background-size:2px 2px;
-  background-position:0 96%
-}
+// .logo a:hover {
+  // color:#222;
+  // background-image:-webkit-linear-gradient(bottom,#222,#222);
+  // background-image:linear-gradient(to top,#222,#222);
+  // text-shadow:-1px -1px 0 #FDFDFD,1px -1px 0 #FDFDFD,-1px 1px 0 #FDFDFD,1px 1px 0 #FDFDFD;
+  // background-repeat:repeat-x;
+  // background-size:2px 2px;
+  // background-position:0 96%
+// }
 
 .nav {
   line-height: $base-line-height;
@@ -78,20 +79,6 @@ body {
     line-height: 1.0;
     display: block;
     padding: 5px 0px 0px 0px;
-
-    /* Menu Links
-    –––––––––––––––––––––––––––––––––––––––––––––––––– */
-    a {
-      color: #FFF;
-      text-decoration: none;
-      //background-color: transparent;
-      -webkit-transition: color .4s;
-      transition: color .4s;
-    }
-    a:hover {
-      color: #ffa403;
-      text-decoration: underline;
-    }
 
     li {
       font-size:2rem;
@@ -195,17 +182,18 @@ input#menu-toggle {
   background-color : rgb(68, 68, 68);
 padding: 10px;
 margin-bottom: 10px;
-border-radius: 20px;
+border-radius: 10px;
 color: white;
 }
 
 .summary-highlight {
   border: #F1F1F1 1px solid;
-  background: #F1F1F1;
+  background: #666666;
   padding: .2rem .5rem;
-  border-radius: 4px;
+  border-radius: 10px;
   margin-bottom: 15px;
   font-size: 110%;
+  color: #FFF;
 }
 
 .post {
