Adds Agilesight accounts in footer links  Updates footer text  Adds agilesight link to logo  updates content padding  archive page:       bigger text size       remove category header       removes author section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header menu-container">
 
-  <h2 class="logo"><img src="{{site.baseurl}}/assets/img/aigilesight-logo.png" /></h2>
+  <h2 class="logo"><a href="http://www.agilesight.com/" onclick="window.open(this.href, 'agilesight');return false;"> <img src="{{site.baseurl}}/assets/img/agilesight-logo.png"/></a></h2>
 
   <div class="nav">
     
