--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,10 @@
   <div class="container">
     <div class="footer left column one-half">
       <section class="small-font">
-        Theme <a href="https://github.com/wild-flame/jekyll-simple"> Simple </a> by <a href="http://wildflame.me">wildflame</a>
+        Copyright © Agilesight 2019
+        <!-- Theme <a href="https://github.com/wild-flame/jekyll-simple"> Simple </a> by <a href="http://wildflame.me">wildflame</a>
         © 2016 
-        Powered by <a href="https://github.com/jekyll/jekyll">jekyll</a>
+        Powered by <a href="https://github.com/jekyll/jekyll">jekyll</a> -->
       </section>
     </div>
 
