--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
           <li><a href="{{ "/" | prepend: site.baseurl }}">Home</a></li>
           <li><a href="{{ "/archive" | prepend: site.baseurl }}">Posts</a></li>
           <li><a href="{{ "/about-this-blog" | prepend: site.baseurl }}">About this blog</a></li>
+          <li><a href="{{ "/who-we-are" | prepend: site.baseurl }}">Who we are</a></li>
           <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></li>
         </ul>
       </nav>
