Titles in uppercase to be consistent with Agilesight site.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           <li><a href="{{ "/archive" | prepend: site.baseurl }}">Posts</a></li>
           <li><a href="{{ "/about-this-blog" | prepend: site.baseurl }}">About this blog</a></li>
           <li><a href="{{ "/who-we-are" | prepend: site.baseurl }}">Who we are</a></li>
-          <li><a href="{{ "/how-to-contact-us" | prepend: site.baseurl }}">How to contact us</a></li>
+          <li><a href="{{ "/how-to-contact-us" | prepend: site.baseurl }}">Contact us</a></li>
           <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></li>
         </ul>
       </nav>
