--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -81,11 +81,12 @@ body {
     padding: 5px 0px 0px 0px;
 
     li {
-      font-size:2rem;
+      font-size:1.9rem;
       list-style:none;
       font-weight: 100;
       margin-bottom:1rem;
       padding-bottom:1rem;
+      text-transform: uppercase;
     }
 
     a:active {
@@ -213,6 +214,10 @@ color: white;
   font-size: 120%;
 }
 
+.title_transform {
+  text-transform: uppercase; 
+}
+
 .post_date {
   color:#888;
   font-size:1.4rem;
@@ -263,6 +268,10 @@ p.readmore {
     margin-left:8px;
   }
 
+}
+
+.article_title {
+  text-transform:uppercase;
 }
 
 .article_share {
