--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -148,7 +148,8 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
+  text-transform: uppercase; 
+  margin-top: 1rem;
   margin-bottom: 2rem;
   font-weight: 400; }
 h1 { font-size: 2.2rem; line-height: 1.2;  letter-spacing: 0rem;}
