--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -244,14 +244,14 @@ p.readmore {
 
 }
 
-.article-content a {
-  border-bottom:1px dotted red;
-  text-decoration:none;
-}
-.article-content a:hover {
-  color:red;
-  border-bottom:1px dotted red;
-}
+// .article-content a {
+  // border-bottom:1px dotted red;
+  // text-decoration:underline;
+// }
+// .article-content a:hover {
+//   color:red;
+//   border-bottom:1px dotted red;
+// }
 
 .article-footer {
 
